# resume-agent

./: .gitignore  .vercelignore  AGENTS.md  LICENSE  README.md  agent.py  benchmark_models.py  config.py  contracts.py  llm_client.py  mock_data.py  pipeline.py  probe_reasoning.py  prompts.py  public_resume.py  public_security.py  pyproject.toml  quota_store.py  report_renderer.py  requirements.txt  run_security.py  run_trace_store.py  runtime_context.py  test_agent.py  test_contracts.py  test_llm.py  test_model_policy.py  test_models.py  test_pipeline.py  test_public_resume.py  test_public_security.py  test_quota_store.py  test_run_security.py  test_runtime_policy.py  test_scoring.py  test_security_fixes.py  test_tools.py  test_trace_catalog.py  test_vercel_api.py  test_vercel_build_output.py  (+12 more)
docs/: deployment-vercel.md
docs/superpowers/plans/: 2026-07-12-resume-agent-reliability.md  2026-07-12-vercel-hobby-workflows.md  2026-07-13-defou-gateway-migration.md  2026-07-14-vercel-workbench-release.md
docs/superpowers/specs/: 2026-07-12-resume-agent-reliability-design.md  2026-07-12-vercel-hobby-workflows-design.md  2026-07-13-defou-gateway-migration-design.md  (+3 more)
samples/: sample_jd.txt  sample_resume.txt
tools/: __init__.py  analysis.py  common.py  file_parser.py  interaction.py  recommendation.py  resume_tools.py  scoring.py  verification.py
webui/: __init__.py  design-philosophy.md  server.py  vercel_server.py
webui/static/: index.html  vercel_app.html
workflows/: __init__.py  graph.py  resume_workflow.py  runtime.py  vercel_worker.py
