[project]
name = "resume-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.6.0,<3.0.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "vercel==0.6.0",
]

[tool.vercel]
entrypoint = "webui.vercel_server:app"
